--- a/resources/vue/src/assets/main.css
+++ b/resources/vue/src/assets/main.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 html,
 body,
@@ -23,8 +23,8 @@ html.dark {
 
 :root {
   /* Lampo Global */
-  --typography-family-primary: 'Inter', sans-serif;
-  --typography-family-secondary: 'Inter', sans-serif;
+  --typography-family-primary: "Inter", sans-serif;
+  --typography-family-secondary: "Inter", sans-serif;
   --borderradius-none: 0px;
   --borderradius-sm: 2px;
   --borderradius-default: 4px;
